# hildanext

./: .gitignore  Hilda NEXT Full Architecture.md  README.md  tmp_rcd_paper.txt
hildanext/: DESIGN.md  VERSIONS.md  dev.ps1  start_monitor.ps1  start_server.py  start_wsd_full_logs.ps1
hildanext/.github/: copilot-instructions.md
hildanext/backend/: README.md  pyproject.toml
hildanext/backend/src/hildanext/: __init__.py  api.py  ar.py  audit.py  audit_wsd_dataset_qwen.py  benchmarks.py  cli.py  config.py  dataset_prep_qwen.py  datasets.py  diffusion.py  formulas.py  inference.py  inference2.py  inference_entrgi.py  inference_ots.py  inference_rcd.py  inference_s2d2.py  io.py  io_utils.py  masks.py  quant.py  recipe.py  smoke.py  stage0_benchmarks.py  tokenization.py  toon.py  trace.py  training.py  utils.py  wsd_stage0.py
hildanext/backend/tests/: test_api_generate_smoke.py  test_smoke.py
hildanext/docs/: BIDIRECTIONAL_ATTENTION_HANDOFF.md  INTERFACCIA_GRAFICA_HILDANEXT.md  PYTHON_INVENTORY.md  PYTHON_INVENTORY_FULL.md  WSD_INVESTIGATION_REPORT.md  llada20_wsd_normalized.md  llada21_wsd_normalized.md  plan_stage_0.md  prepare_wsd_dataset_qwen.md  safe_architecture.md  test.md
hildanext/frontend/: .env.development  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
hildanext/scripts/: audit_wsd_dataset_qwen.ps1  check_events.ps1  fix_tdr_registry.ps1  make_resume_ckpt.py  preflight_20steps.py  prepare_wsd_dataset_qwen.ps1  reset_and_download_dolma.ps1  run_dolma_prep.ps1  run_wsd_overnight.ps1  (+2 more)
(+171 files in other folders)
